--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,39 @@
-header{
-    background:url(/images/coffee-background.jpg) center/cover no-repeat;
-    padding-bottom:0.8em;
+h1{
+    font-size:1.7em;
+    margin-top:1.5em;
+}
+h2{
+    font-size: 1.4em;
+    font-weight:400;
+}
+section{
+    background-color:var(--main-brown-color);
+    color:#fff;
+    padding-bottom:2em;
+}
+.content-width{
+    max-width:85%;
+    margin:0px auto;
+    margin-bottom:2.5em;
+}
+blockquote{
+    color:var(--green-color);
+    text-align: start;
+    font-style:italic;
+    border-left:2px solid var(--main-brown-color);
+    padding-left:1.5em;
+    margin:0px auto;
+    margin-bottom:2.5em;
+    margin-top:2.5em;
+}
+.bold-text{
+    font-weight: bold;
+}
+#cappuccino-image{
+    max-width:100vw;
+    height:100%;
+}
+#blogger-image{
+    max-width:100%;
+    height:auto;
 }
