--- a/css/index.css
+++ b/css/index.css
@@ -15,26 +15,29 @@ h1, h2, .index-cta{
 }
 
 h1{
-    font-size:1.9em;
+    font-size:1.7em;
+    font-weight: 800;
 }
 h2{
-    font-size:1.4em;
-    font-style:italic;
+    font-size:1.1em;
     font-weight:400;
     margin-bottom:75px;
+    font-style:italic;
 }
 h3{
-    font-size:1.2em;
+    font-family: 'Limelight', Times, serif;
+    font-size:1.3em;
     margin-top:0px;
     padding-top:1em;
     text-align: center;
+    font-weight:600;
 }
 a{
     text-decoration: none;
 }
 /* index-cta, cta-animation and hover */
 .index-cta {
-    font-size:1.2em;
+    font-size:1em;
     font-weight:600;
     border:1px solid #fff;
     text-decoration: none;
@@ -46,16 +49,17 @@ a{
     transition: "background-color" 1s ease-in-out;
 }
 .index-cta:hover{
-    background-color: #49654B;
+    background-color: var(--green-color);
     animation-name:none;
     border-color:#ffffff00;
+    transform:scale(1.05);
 }
 @keyframes background-opacity-cta {
     0%{
         background-color:#00000050;
     }
     50%{
-        background-color:#00000090;
+        background-color:#000000bb;
     }
     100%{
         background-color:#00000050;
@@ -69,8 +73,12 @@ a{
 /* posts-carousel, arrows center part of page */
 
 .fa-chevron-left, .fa-chevron-right{
-    font-size:2em;
+    font-size:1.8em;
     margin-bottom: 10em;
+}
+.fa-chevron-left:hover, .fa-chevron-right:hover{
+    color:var(--green-color);
+    transform:scale(1.1);
 }
 #carousel-arrows{
     display:flex;
