--- a/css/global.css
+++ b/css/global.css
@@ -4,6 +4,9 @@
 :root{
     --main-brown-color:#61310F;
     --green-color:#3B543D;
+    --main-font:'Antonio', sans-serif;
+    --serif-font:'Cormorant SC', serif;
+    --subheading-color:#252525;
 }
 
 /* Developed mobile first */
@@ -12,7 +15,7 @@ body{
     margin:0px auto;
 }
 h1{
-    font-family: 'Limelight', Times, serif;
+    font-family: var(--main-font);
 }
 main{
      margin:0px auto;
@@ -24,7 +27,7 @@ body{
 /* header (logo, drop-down menu)*/
 #header-background-image{
     background:url(/images/coffee-background.jpg) center/cover no-repeat;
-    padding-bottom:0.8em;
+    padding-bottom:10px;
 }
 header{
     display:flex;
@@ -34,20 +37,20 @@ header{
 }
 #logo{
 max-width:120px;
-max-height:40px;
+height:auto;
 margin-left:2em;
 }
 
 nav{
-    font-size:1.5em;
-    font-style:bold;
-    font-weight:500;
+    font-family: var(--main-font);
+    font-size:1.7em;
+    font-weight:100;
     position:absolute;
     display:none;
     right:0;
     left:0;
-    top:2.8em;
-    padding-bottom:2em;
+    top:70px;
+    padding-bottom:35px;
     background: rgb(68,35,14);
     background: linear-gradient(0deg, rgba(68,35,14,1) 13%, rgba(42,21,5,1) 78%);
     border-top:2px solid #61310F;
@@ -58,13 +61,13 @@ nav{
         top:0;
     }
     to{
-        top:2.8em;
+        top:70px;
     }
 }
 nav ul li{
     list-style-type:none;
-    margin-top:1.5em;
-    margin-left:30%;
+    margin-top:30px;
+    margin-left:10%;
     animation: nav-delay-animation 1s ease-in-out;
 }
 @keyframes nav-delay-animation{
