--- a/css/index.css
+++ b/css/index.css
@@ -15,17 +15,17 @@ h1, h2, .index-cta{
 }
 
 h1{
-    font-size:1.7em;
+    font-size:2.2em;
     font-weight: 800;
 }
 h2{
-    font-size:1.1em;
+    font-family:var(--serif-font);
+    font-size:1.5em;
     font-weight:400;
     margin-bottom:75px;
-    font-style:italic;
 }
 h3{
-    font-family: 'Limelight', Times, serif;
+    font-family: var(--main-font);
     font-size:1.3em;
     margin-top:0px;
     padding-top:1em;
@@ -37,7 +37,8 @@ a{
 }
 /* index-cta, cta-animation and hover */
 .index-cta {
-    font-size:1em;
+    font-family: var(--main-font);
+    font-size:1.1em;
     font-weight:600;
     border:1px solid #fff;
     text-decoration: none;
