--- a/css/about.css
+++ b/css/about.css
@@ -1,11 +1,11 @@
 h1{
-    font-size:1.7em;
-    margin-top:1.5em;
+    font-size:2em;
+    margin-top:35px;
     font-weight: 100;
 }
 h2{
     font-family: var(--serif-font);
-    font-size: 1.4em;
+    font-size: 1.7em;
     font-weight:500;
     color:var(--subheading-color);
 }
@@ -23,11 +23,12 @@ section h2{
     margin-bottom:2.5em;
 }
 blockquote{
-    font-size: 1.1em;
+    font-size: 1em;
+    font-weight: bold;
     font-family: var(--serif-font);
-    color:var(--green-color);
     font-style:italic;
     border-left:2px solid var(--main-brown-color);
+    color:var(--green-color);
     padding-left:1.5em;
     margin:0px auto;
     margin-bottom:3em;
@@ -35,6 +36,8 @@ blockquote{
 }
 .bold-text{
     font-weight: bold;
+    font-size:1.1em;
+    color:var(--main-brown-color);
 }
 #cappuccino-image{
     max-width:100vw;
