--- a/css/global.css
+++ b/css/global.css
@@ -4,8 +4,8 @@
 :root{
     --main-brown-color:#61310F;
     --green-color:#3B543D;
-    --main-font:'Antonio', sans-serif;
-    --serif-font:'Cormorant SC', serif;
+    --main-font:'Antonio',tahoma, sans-serif;
+    --serif-font:'Cormorant SC', georgia, serif;
     --subheading-color:#252525;
 }
 
@@ -24,7 +24,7 @@ body{
     font-family: 'Open Sans', 'roboto', 'Segoe UI',sans-serif;
 }
 
-/* header (logo, drop-down menu)*/
+/* header (logo, drop-down menu) CTA*/
 #header-background-image{
     background:url(/images/coffee-background.jpg) center/cover no-repeat;
     padding-bottom:10px;
@@ -33,11 +33,11 @@ header{
     display:flex;
     flex-direction: row;
     justify-content:space-between;
-    padding-top:20px;
+    padding-top:15px;
 }
 #logo{
-max-width:120px;
-height:auto;
+max-width:130px;
+height:40px;
 margin-left:2em;
 }
 
@@ -94,4 +94,85 @@ nav a{
     color:#fff;
     padding-top:5px;
     margin-right:1em;
+}
+/* CTA */
+
+.cta:hover{
+    background-color:var(--green-color);
+}
+.cta{
+    font-size: 1em;
+    margin-top:50px;
+    padding:15px;
+    background-color:var(--main-brown-color);
+    border:none;
+    border-radius: 2px;
+    font-weight:300;
+    color:#fff;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+/* Footer */
+footer h4{
+    font-size:1.3em;
+    text-align: center;
+}
+footer{
+    max-width:90%;
+    font-family: var(--main-font);
+}
+#footer-container{
+    display:flex;
+    flex-flow: row-reverse wrap;
+    justify-content: center;
+}
+#footer-nav{
+    font-weight:100;
+    font-size:1.2em;
+    border-left:2px solid var(--main-brown-color);
+}
+#footer-nav ul{
+    list-style-type: none;
+    color:#000;
+    text-align: start;
+}
+#footer-nav a{
+    color:#000;
+    text-decoration: none;
+}
+#footer-logo{
+    max-width:145px;
+    height:55px;
+}
+form{
+    margin:0px auto;
+}
+label::after{
+    content:"";
+    display:block;
+}
+footer button{
+    letter-spacing:1px;
+    margin-left:10px;
+    border-radius: 2px;
+    padding:10px;
+    background-color:var(--main-brown-color);
+    border:none;
+    color:#fff;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+footer button:hover{
+    background-color:var(--green-color);
+}
+#social-icons {
+    text-align: center;
+}
+.fab{
+    color:var(--green-color);
+    font-size: 1.7em;
+    padding:5px;
+    margin-top:25px;
+    margin-bottom:25px;
 }
