--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,8 @@
 main{
-    margin-top:5em;
+    margin-top:100px;
 }
 #index-background-image{
     background:url(/images/coffee-background.jpg) bottom left/cover no-repeat;
-    border-bottom: 2px solid #2A1505;
 }
 #index-bottom-background{
     background:url(/images/index-bottom-background.jpg) center/cover no-repeat;
@@ -54,6 +53,14 @@ a{
     animation-name:none;
     border-color:#ffffff00;
     transform:scale(1.05);
+}
+.cta{
+    font-size: 1.2em;
+    margin-bottom:75px;
+    width:35%;
+}
+.center-align{
+    text-align: center;
 }
 @keyframes background-opacity-cta {
     0%{
