--- a/css/index.css
+++ b/css/index.css
@@ -38,9 +38,8 @@ h4{
     font-size:1.3em;
     color:#fff;
     text-align: center;
-    margin-top:0px;
+    margin-top:10px;
     margin-bottom:0px;
-    padding:7.5px 10px;
 }
 a{
     text-decoration: none;
@@ -101,10 +100,11 @@ a{
     gap: 20px;
 }
 #posts-carousel p{
-    font-family: var(--serif-font);
+    font-style: italic;
+    font-weight:200;
     color:#fff;
     text-align: end;
-    margin-top:5px;
+    margin-top:10px;
     margin-right:12px;
 
 }
@@ -116,7 +116,7 @@ a{
 }
 .featured-image{
     width: 100%;
-	height:55%;
+	height:50%;
 	background-position: center;
 	background-size: cover;
     background-repeat: no-repeat;
