--- a/css/posts.css
+++ b/css/posts.css
@@ -1,16 +1,58 @@
 
 /* posts.html container */
-.posts-container{
-    width:90%;
-    display:flex;
-    flex-flow:row nowrap;
+h1{
+    font-size:1.9em;
+    font-weight: 400;
+}
+h2{
+    font-family:var(--serif-font);
+    font-size:1.5em;
+    font-weight:600;
+    font-style:italic;
+}
+h4{
+    font-family:var(--main-font);
+    font-size:1.6em;
+    color:#fff;
+    margin-top:10px;
+    margin-bottom:0px;
+}
+a{
+    text-decoration: none;
+}
+.container-text-width{
+    max-width:85%;
     margin:0px auto;
-    margin-top:25px;
-    gap: 20px;
+}
+.description{
+    color:#fff;
+    text-decoration: none;
+    overflow: hidden;
+}
+.date{
+    font-style: italic;
+    font-size:0.9em;
+    font-weight:200;
+    color:#fff;
+    margin-top:0px;
+}
+.blog-list-container{
+    width:100%;
+    display:flex;
+    flex-flow:column;
+    margin:0px auto;
+}
+.read-link{
+    font-style: italic;
+    font-weight:200;
+    color:#fff;
+    text-align: end;
+    margin-right:25px;
+
 }
 .post-container{
-    width:125px;
-    height:225px;
+    width:100%;
+    height:500px;
     margin:0px auto;
     background-color:var(--green-color);
 }
