--- a/css/posts.css
+++ b/css/posts.css
@@ -1,4 +1,3 @@
-
 /* posts.html container */
 h1{
     font-size:1.9em;
@@ -10,16 +9,18 @@ h2{
     font-weight:600;
     font-style:italic;
 }
-h4{
+h3{
     font-family:var(--main-font);
     font-size:1.6em;
     color:#fff;
-    margin-top:10px;
+    margin-top:20px;
     margin-bottom:0px;
 }
 a{
     text-decoration: none;
 }
+/* #more-posts-button{
+} */
 .container-text-width{
     max-width:85%;
     margin:0px auto;
@@ -27,7 +28,6 @@ a{
 .description{
     color:#fff;
     text-decoration: none;
-    overflow: hidden;
 }
 .date{
     font-style: italic;
@@ -38,9 +38,9 @@ a{
 }
 .blog-list-container{
     width:100%;
+    max-height:85%;
     display:flex;
     flex-flow:column;
-    margin:0px auto;
 }
 .read-link{
     font-style: italic;
@@ -55,6 +55,7 @@ a{
     height:500px;
     margin:0px auto;
     background-color:var(--green-color);
+    padding-bottom:15px;
 }
 .featured-image{
     width: 100%;
@@ -63,3 +64,5 @@ a{
 	background-size: cover;
     background-repeat: no-repeat;
 }
+
+/* FOOTER */
