--- a/css/index.css
+++ b/css/index.css
@@ -27,10 +27,10 @@ h2{
 }
 h3{
     font-family: var(--main-font);
-    font-size:1.3em;
+    font-size:1.6em;
     margin-top:0px;
     padding-top:35px;
-    text-align: center;
+    text-align:center;
     font-weight:800;
 }
 h4{
@@ -39,8 +39,8 @@ h4{
     font-size:1.3em;
     color:#fff;
     text-align: center;
+    margin:0px auto;
     margin-top:10px;
-    margin-bottom:0px;
 }
 a{
     text-decoration: none;
@@ -58,7 +58,7 @@ a{
     border-radius:2px;
     animation: background-opacity-cta 4s ease-in-out infinite;
     transition: "background-color" 1s ease-in-out;
-    box-shadow: 3px 3px 15px rgb(0, 0, 0);
+    box-shadow: var(--box-shadow);
 }
 .index-cta:hover{
     background-color: var(--green-color);
@@ -93,27 +93,27 @@ a{
 /* posts-carousel, arrows center part of page */
 
 #posts-carousel{
-    width:90%;
-    display:flex;
-    flex-flow:row nowrap;
+    width:85%;
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
     margin:0px auto;
-    margin-top:25px;
-    gap: 20px;
+    gap:30px;
 }
-#posts-carousel p{
+.read-link{
     font-style: italic;
     font-weight:200;
     color:#fff;
-    text-align: end;
-    margin-top:10px;
-    margin-right:12px;
-
+    text-align: right;
+    right:0;
 }
 .post-container{
-    width:125px;
+    max-width:200px;
     height:225px;
-    margin:0px auto;
     background-color:var(--green-color);
+    margin-top:10px;
+    box-shadow: var(--box-shadow);
 }
 .featured-image{
     width: 100%;
@@ -128,18 +128,22 @@ a{
     height:auto;
 } */
 .fa-chevron-left, .fa-chevron-right{
+    cursor: pointer;
     font-size:1.8em;
     text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.494);
+    margin-bottom:20px;
 }
 .fa-chevron-left:hover, .fa-chevron-right:hover{
     color:var(--green-color);
     transform:scale(1.1);
 }
+.fa-chevron-left{
+    display:none;
+}
 #carousel-arrows{
     display:flex;
-    flex-direction:row;
-    justify-content: center;
-    gap:1.5em;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 /* MEDIA QUERIES */
@@ -153,7 +157,7 @@ a{
         font-size:1.5em;
     }
     h3{
-        font-size:1.4em;
+        font-size:1.8em;
     }
     /* index-cta, cta-animation and hover */
     .index-cta {
@@ -162,7 +166,6 @@ a{
     }
     .fa-chevron-left, .fa-chevron-right{
         font-size:2.5em;
-        margin-bottom: 10em;
     }
 }
 /* @media only screen and (min-width:650px){
@@ -207,5 +210,23 @@ a{
     /* index-cta */
     .index-cta {
         font-size:1.4em;
+    }
+    .fa-chevron-left, .fa-chevron-right{
+        margin-bottom:25px;
+    }
+    #posts-carousel{
+        width:75%;
+        display:grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 100%;
+        justify-content: center;
+        margin:0px auto;
+        column-gap: 50px;
+    }
+    .post-container{
+        max-width:250px;
+        height:275px;
+        background-color:var(--green-color);
+        margin-top:10px;
     }
 }
