--- a/css/posts.css
+++ b/css/posts.css
@@ -1,7 +1,7 @@
-/* posts.html container */
 h1{
     font-size:1.9em;
     font-weight: 400;
+    margin-top:35px;
 }
 h2{
     font-family:var(--serif-font);
@@ -9,6 +9,18 @@ h2{
     font-weight:600;
     font-style:italic;
 }
+a{
+    text-decoration: none;
+}
+ #more-posts-button{
+     margin-top:50px;
+     text-align: center;
+} 
+.top-text-width{
+    border-bottom:1px solid var(--green-color);
+    padding-bottom:25px;
+}
+/* Blogpost-container/posts */
 h3{
     font-family:var(--main-font);
     font-size:1.6em;
@@ -16,12 +28,7 @@ h3{
     margin-top:20px;
     margin-bottom:0px;
 }
-a{
-    text-decoration: none;
-}
-/* #more-posts-button{
-} */
-.container-text-width{
+.container-text-width, .top-text-width{
     max-width:85%;
     margin:0px auto;
 }
@@ -37,10 +44,10 @@ a{
     margin-top:0px;
 }
 .blog-list-container{
-    width:100%;
-    max-height:85%;
-    display:flex;
-    flex-flow:column;
+     padding-top:50px;  
+     height:100%;
+     display:flex;
+     flex-direction:column;
 }
 .read-link{
     font-style: italic;
@@ -48,21 +55,57 @@ a{
     color:#fff;
     text-align: end;
     margin-right:25px;
-
 }
-.post-container{
-    width:100%;
-    height:500px;
-    margin:0px auto;
-    background-color:var(--green-color);
+.brown-post-container{
+    background-color:var(--main-brown-color);
     padding-bottom:15px;
 }
 .featured-image{
     width: 100%;
-	height:50%;
+	height:225px;
 	background-position: center;
 	background-size: cover;
     background-repeat: no-repeat;
 }
 
 /* FOOTER */
+
+
+/* MEDIA QUERIES */
+
+@media only screen and (min-width:450px){
+
+    .container-text-width, .top-text-width{
+        max-width:75%;
+    }
+    .featured-image{
+        height:300px;
+    }
+}
+@media only screen and (min-width:550px){
+    .blog-list-container{
+        flex-flow:row wrap;
+    }
+    .green-post-container{
+        padding-bottom:15px;
+    }
+    .brown-post-container{
+        max-width:50vw;
+        height:100%;
+    }
+    .featured-image{
+        width: 100%;
+        height:225px;
+    }
+}
+@media only screen and (min-width:900px){
+
+    .brown-post-container{
+        max-width:33.3vw;
+        padding-bottom:0px;
+    }
+    .top-text-width{
+        max-width: 50%;
+        margin-left:10%;
+    }
+}
