--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ main{
     margin-top:80px;
 }
 #index-background-image{
-    background:url(/images/coffee-background.jpg) left center/cover no-repeat;
+    background:url(/images/coffee-background.jpg) 40%/cover no-repeat;
 }
 #index-bottom-background{
     background:url(/images/index-bottom-background.jpg) 80%/cover no-repeat;
@@ -66,6 +66,10 @@ a{
     border-color:#ffffff00;
     transform:scale(1.05);
 }
+#index-cta-padding{
+    padding-bottom:75px;
+    text-decoration: none;
+}
 .cta{
     font-size: 1.1em;
     margin-bottom:75px;
@@ -85,21 +89,30 @@ a{
         background-color:#00000050;
     }
 }
-#index-cta-padding{
-    padding-bottom:75px;
-    text-decoration: none;
-}
 
 /* posts-carousel, arrows center part of page */
 
 #posts-carousel{
-    width:85%;
+    max-width:85%;
     display:grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-    justify-content: center;
     margin:0px auto;
+    margin-top:10px;
     gap:30px;
+}
+.post-container{
+    max-width:175px;
+    height:225px;
+    background-color:var(--green-color);
+    box-shadow: var(--box-shadow);
+}
+.featured-image{
+    width: 100%;
+	height:60%;
+	background-position: center;
+	background-size: cover;
+    background-repeat: no-repeat;
 }
 .read-link{
     font-style: italic;
@@ -108,25 +121,6 @@ a{
     text-align: right;
     right:0;
 }
-.post-container{
-    max-width:200px;
-    height:225px;
-    background-color:var(--green-color);
-    margin-top:10px;
-    box-shadow: var(--box-shadow);
-}
-.featured-image{
-    width: 100%;
-	height:50%;
-	background-position: center;
-	background-size: cover;
-    background-repeat: no-repeat;
-}
-/* API images */
-/* figure img {
-    max-width:100vw;
-    height:auto;
-} */
 .fa-chevron-left, .fa-chevron-right{
     cursor: pointer;
     font-size:1.8em;
@@ -164,8 +158,29 @@ a{
         font-size:1.2em;
         width:165px;
     }
+    #index-cta-padding{
+        padding-bottom:125px;
+    }
     .fa-chevron-left, .fa-chevron-right{
         font-size:2.5em;
+    }
+    
+    #posts-carousel{
+        max-width:400px;
+    }
+    .post-container{
+        max-width:175px;
+        height:225px;
+        background-color:var(--green-color);
+        margin-top:10px;
+        box-shadow: var(--box-shadow);
+    }
+    .featured-image{
+        width: 100%;
+        height:50%;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
     }
 }
 /* @media only screen and (min-width:650px){
@@ -188,10 +203,13 @@ a{
     .index-cta {
         font-size:1.3em;
     }
+    #index-cta-padding{
+        padding-bottom:150px;
+    }
 }
 @media only screen and (min-width:980px){
     #index-background-image{
-        background:url(/images/coffee-background.jpg) bottom/cover no-repeat;
+        background:url(/images/coffee-background.jpg) 15% 25%/cover no-repeat;
     }
     #index-bottom-background{
         background:url(/images/index-bottom-background.jpg) 90%/cover no-repeat;
@@ -199,6 +217,7 @@ a{
     h1{
         font-size:2.6em;
         width:30%;
+
     }
     h2{
         font-size:1.9em;
@@ -215,7 +234,7 @@ a{
         margin-bottom:25px;
     }
     #posts-carousel{
-        width:75%;
+        max-width:75%;
         display:grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 100%;
