--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,8 @@
+main{
+    width:85%;
+    max-width: 850px;
+    margin:0px auto;
+}
 h1{
     margin-top:35px;
     font-weight: 100;
@@ -13,12 +18,12 @@ section{
     color:#fff;
     padding-bottom:2em;
 }
-section h2{
+section h2, section p{
     color:#fff;
+    margin-left:5%;
 }
 .content-width{
-    max-width:85%;
-    margin:0px auto;
+    max-width:850px;
     margin-bottom:2.5em;
 }
 blockquote{
@@ -38,9 +43,12 @@ blockquote{
     font-size:1.1em;
     color:var(--main-brown-color);
 }
+p{
+    max-width:85%;
+}
 #cappuccino-image{
-    max-width:100vw;
-    height:100%;
+    width:100%;
+    height:auto;
 }
 #blogger-image{
     max-width:100%;
