--- a/css/global.css
+++ b/css/global.css
@@ -52,7 +52,7 @@ nav{
     display:none;
     right:0;
     left:0;
-    top:70px;
+    top:65px;
     padding-bottom:35px;
     background: var(--brown-linear-gradient);
     animation: drop-down-menu 0.2s ease-in 1;
@@ -62,7 +62,7 @@ nav{
         top:0;
     }
     to{
-        top:70px;
+        top:65px;
     }
 }
 nav ul li{
@@ -89,7 +89,7 @@ nav a{
 #hamburger-menu {
     display:none;
 }
-#hamburger-menu:checked ~ nav {
+#hamburger-menu:checked ~ nav { 
     display:block;
 }
 .fa-bars{
@@ -199,7 +199,7 @@ footer .fab{
     nav{
         font-size:1.8em;
         left:50%;
-        top:60px;
+        top:65px;
     }
     @keyframes drop-down-menu{
         from{
@@ -211,6 +211,9 @@ footer .fab{
     }
 }
 @media (min-width:600px){
+    nav{
+        top:70px;
+    }
     #logo{
         max-width:152px;
         height:45px;
@@ -221,13 +224,6 @@ footer .fab{
         margin-right:35px;
     }    
 }
-@media (min-width:700px){
-    nav{
-        font-size:1.8em;
-        left:60%;
-        top:60px;
-    }
-}
 @media (min-width:1150px){
     header{
         position:sticky;
@@ -235,11 +231,11 @@ footer .fab{
         justify-content:space-between;
         padding-top:20px;
     }
+    header label{
+        display:none;
+    }
     #menu-and-icons{
         margin-right:5%;   
-    }
-    input{
-        display: none;   
     }
     #logo{
         max-width:170px;
@@ -260,9 +256,6 @@ footer .fab{
     }
     nav ul{
         margin-top:0px;
-    }
-    .fa-bars{
-        display:none;
     }
     header .fab {
         display:inline-block;
