--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+body{
+    max-width:1500px;
+    background-color:rgb(255, 255, 255);
+}
 main{
     margin-top:80px;
 }
@@ -248,7 +252,7 @@ a{
         margin-top:150px;
     }
     #index-cta-padding{
-        padding-bottom:350px;
+        padding-bottom:250px;
     }
     #index-background-image{
         background:url(/images/background-big-screen-cropped.jpg) 10%/cover no-repeat;
