--- a/css/specific-post.css
+++ b/css/specific-post.css
@@ -7,14 +7,6 @@ h1{
     margin-left:10%;
     margin-bottom:0px;
 }
-.date{
-    margin-left:10%;
-    font-size:0.9em;
-    font-style: italic;
-    margin-top:0px;
-    margin-bottom:20px;
-    color:var(--subheading-color);
-}
 h2{
     font-family:var(--serif-font);
     font-size:1.5em;
@@ -31,7 +23,7 @@ h3{
     height:auto;
     margin-top:25px;
     margin-bottom:15px;
-    cursor:pointer;
+    cursor:zoom-in
 }    
 .post-content{
     max-width:85%;
@@ -49,6 +41,14 @@ h3{
 	background-size: cover;
     background-repeat: no-repeat;
 }
+.date{
+    margin-left:10%;
+    font-size:0.9em;
+    font-style: italic;
+    margin-top:0px;
+    margin-bottom:20px;
+    color:var(--subheading-color);
+}
 
 /* Image modal for post-images */
 .post-image-modal{
@@ -56,20 +56,29 @@ h3{
     width: 80vw;
 	height:35vh;
     margin-left:10vw;
-    margin-top:50%;
+    margin-top:35%;
 	background-position: center;
-	background-size: cover;
+	background-size: contain;
     background-repeat: no-repeat;
-    z-index: 100;
+    z-index: 99;
 }
 .image-modal{
-    background-color: rgba(0, 0, 0, 0.768);
+    background-color: rgba(0, 0, 0, 0.85);
     position: fixed;
     top:0;
     right:0;
     bottom:0;
     left:0;
-    z-index:99;
+    z-index:98;
+}
+/* modal closing X */
+
+.fa-times{
+    position: absolute;
+    font-size: 2em;
+    color:rgb(187, 187, 187);
+    z-index: 100;
+    right:0;
 }
 
 /* MEDIA QUERIES */
@@ -77,35 +86,23 @@ h3{
 @media only screen and (min-width:500px){
 
     .post-image-modal{
-        margin-top:35%;
-        height:50vh;
-    }
-
-}
-@media only screen and (min-width:750px){
-
-    .post-image-modal{
-        max-width:850px;
-        margin-top:15%;
+        margin-top:5%;
         height:65vh;
     }
 
 }
-@media only screen and (min-width:1000px){
+@media only screen and (min-width:850px){
 
     .post-image-modal{
-        max-width:50vw;
-        margin-top:20vh;
-        margin-left:25vw;
-        height:65vh;
+        top:10%;
+        right:0;
+        bottom:0;
+        left:0;
     }
 }
-@media only screen and (min-width:1300px){
+@media only screen and (min-width:1600px){
 
     .post-image-modal{
-        max-width:50vw;
-        margin-top:15vh;
-        margin-left:25vw;
-        height:65vh;
+        top:5%;
     }
 }
