--- a/css/contact.css
+++ b/css/contact.css
@@ -18,7 +18,7 @@ main::before{
     right:0px;
     bottom:0px;
     left:0px;
-    opacity:0.65;
+    opacity:0.35;
     z-index: 1;
 }
 fieldset{
@@ -35,9 +35,31 @@ fieldset{
     font-size:1em;
     width:85%;
 }
+.contact-form-input:hover{
+    border-color:var(--green-color);
+}
 textarea{
     height:125px;
     width:100%;   
+}
+
+/* form error message*/
+
+.form-error {
+	font-size: 0.9em;
+	color: rgb(113, 0, 0);
+	display: none;
+}
+#message-response-text{
+    position:relative;
+    z-index: 2;
+    margin:0px auto;
+    max-width:85%;
+}
+span{
+    font-family: var(--serif-font);
+    font-weight: 700;
+    font-style: italic;
 }
 
 /* Media Queries */
