--- a/css/posts.css
+++ b/css/posts.css
@@ -49,13 +49,6 @@ h3{
      display:flex;
      flex-direction:column;
 }
-.read-link{
-    font-style: italic;
-    font-weight:200;
-    color:#fff;
-    text-align: end;
-    margin-right:25px;
-}
 .brown-post-container{
     background-color:var(--main-brown-color);
     padding-bottom:15px;
@@ -63,7 +56,7 @@ h3{
 .featured-image{
     width: 100%;
 	height:225px;
-	background-position: center;
+	background-position: top;
 	background-size: cover;
     background-repeat: no-repeat;
 }
@@ -86,12 +79,10 @@ h3{
     .blog-list-container{
         flex-flow:row wrap;
     }
-    .green-post-container{
-        padding-bottom:15px;
-    }
     .brown-post-container{
         max-width:50vw;
         height:100%;
+        padding-bottom:0px;
     }
     .featured-image{
         width: 100%;
@@ -111,12 +102,26 @@ h3{
 }
 
 @media only screen and (min-width:900px){
+    .brown-post-container{
+        max-width:33.33vw;
+        padding-bottom:0px;
+    }
+}
+@media only screen and (min-width:1200px){
     main{
-        max-width:85%;
+        width:85%;
+        max-width:1280px;
         margin:0px auto;
     }
     .brown-post-container{
-        max-width:25vw;
-        padding-bottom:0px;
+        max-width:325px;
+    }
+    .brown-post-container:hover{
+        box-shadow: 4px 4px 25px 4px rgba(0, 0, 0, 0.487);
+        transform:scale(1.02);
+    }
+    .blog-list-container{
+        justify-content: space-evenly;
+        row-gap: 50px;
     }
 }
