--- a/css/global.css
+++ b/css/global.css
@@ -11,7 +11,7 @@
     --box-shadow:3px 3px 15px rgb(0, 0, 0);
 
     --main-font:'Antonio', tahoma, sans-serif;
-    --serif-font:'Monsieur La Doulaise', georgia, serif;
+    --serif-font:'Tangerine', georgia, serif;
 
 }
 
