--- a/css/contact.css
+++ b/css/contact.css
@@ -53,8 +53,9 @@ textarea{
 #message-response-text{
     position:relative;
     z-index: 2;
+    width:85%;
+    max-width:350px;
     margin:0px auto;
-    max-width:85%;
 }
 span{
     font-family: var(--serif-font);
