--- a/css/posts.css
+++ b/css/posts.css
@@ -5,7 +5,7 @@ h1{
 }
 h2{
     font-family:var(--serif-font);
-    font-size:1.5em;
+    font-size:2em;
     font-weight:600;
     font-style:italic;
 }
@@ -19,6 +19,11 @@ a{
 .top-text-width{
     border-bottom:2px solid var(--green-color);
     padding-bottom:25px;
+}
+#add-serif-font{
+    font-family: var(--serif-font);
+    font-size: 1.7em;
+    font-weight: bold;
 }
 /* Blogpost-container/posts */
 h3{
@@ -36,13 +41,6 @@ h3{
     color:#fff;
     text-decoration: none;
 }
-.date{
-    font-style: italic;
-    font-size:0.9em;
-    font-weight:200;
-    color:#fff;
-    margin-top:0px;
-}
 .blog-list-container{
      padding-top:50px;  
      height:100%;
@@ -59,6 +57,24 @@ h3{
 	background-position: top;
 	background-size: cover;
     background-repeat: no-repeat;
+}
+.date{
+    font-style: italic;
+    font-size:0.9em;
+    font-weight:200;
+    color:#fff;
+    margin-top:0px;
+}
+/* read-link */
+.read-link{
+    font-family: var(--serif-font);
+    font-size:2.2em;
+    font-style:italic;
+    font-weight: 200;
+    color:rgb(220, 220, 220);
+    text-align: right;
+    margin-right:15px;
+    margin-top:5px;
 }
 
 /* FOOTER */
@@ -114,6 +130,7 @@ h3{
         margin:0px auto;
     }
     .brown-post-container{
+        transition: all 0.2s ease-in-out;
         max-width:325px;
     }
     .brown-post-container:hover{
