--- a/css/specific-post.css
+++ b/css/specific-post.css
@@ -86,6 +86,12 @@ h3{
     color:rgb(187, 187, 187);
     z-index: 100;
     right:0;
+    top:0;
+    cursor:pointer;
+}
+.fa-times:hover{
+    transform: scale(1.1);
+    color:rgb(113, 0, 0);
 }
 
 /* MEDIA QUERIES */
