--- a/css/posts.css
+++ b/css/posts.css
@@ -129,6 +129,9 @@ h3{
         max-width:1280px;
         margin:0px auto;
     }
+    h3{
+        margin-top:35px;
+    }
     .brown-post-container{
         transition: all 0.2s ease-in-out;
         max-width:325px;
